[package]
name = "bounded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-raw-sys = {  version = "0.*", features = ["io_uring", "general"] }
anyhow = "*"
bitflags = "2.*"
libc = "0.2.*"
log = "0.4.*"
errno = "0.3.*"